# Dynamic-Structure-Arrays

./: CMakeLists.txt  Makefile  cscd240Lab13.c  cscd240Lab13out.txt  cscd240Lab13val.txt  lab13.c  lab13.h
utils/: fileUtils.c
